--- a/arm64/docker-compose.yaml
+++ b/arm64/docker-compose.yaml
@@ -7,13 +7,13 @@ services:
     environment:
       ORACLE_SID: MYORADB
       ORACLE_PDB: MYORADB1
-      ORACLE_PWD: Change_This_Pwd_123!  # Default password for SYS, SYSTEM, and other initial users
+      ORACLE_PWD: ChangeMe123  # Default password for SYS, SYSTEM, and other initial users
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - oracle-data:/opt/oracle/oradata
       - ./init-scripts:/opt/oracle/scripts/startup
     healthcheck:
-      test: ["CMD", "sqlplus", "-silent", "sys/Change_This_Pwd_123!//localhost:1521/MYORADB as sysdba", "EXIT"]
+      test: ["CMD", "sqlplus", "-silent", "sys/ChangeMe123//localhost:1521/MYORADB as sysdba", "EXIT"]
       interval: 30s
       timeout: 10s
       retries: 5
